# factset-data-collector

./: .gitignore  DEVELOPMENT_LOG.md  README.md  README_PYPI.md  main.py  pyproject.toml
.github/workflows/: data-collection.yml
actions/: workflow.py
actions/steps/: __init__.py  step1_check_pdfs.py  step2_download_pdfs.py  step3_extract_charts.py  step4_process_images.py  step5_upload_cloud.py  step6_generate_plot.py
deprecated/: README.md
deprecated/scripts/: test_easyocr_results.py  visualize_craft_ocr.py
deprecated/src/chart_ocr_processor/: craft_detector.py
deprecated/src/chart_ocr_processor/basenet/: vgg16_bn.py
output/preprocessing_test/: easyocr_test_results.csv
scripts/: README.md
scripts/data_collection/: download_factset_pdfs.py  extract_eps_charts.py
scripts/testing/: test_coordinate_matching.py  test_multiple_methods_classification.py
scripts/visualization/: visualize_bar_classification.py  visualize_bar_preprocessing.py  visualize_coordinate_matching.py  visualize_google_ocr_full.py  visualize_image_preprocessing.py
src/chart_ocr_processor/: __init__.py  processor.py
src/eps_estimates_collector/: __init__.py
src/eps_estimates_collector/analysis/: pe_ratio.py
src/factset_data_collector/analysis/: pe_ratio.py
src/factset_data_collector/core/ocr/: processor.py
src/factset_data_collector/utils/: cloudflare.py
src/factset_report_analyzer/: __init__.py
src/factset_report_analyzer/analysis/: __init__.py  sp500.py
src/factset_report_analyzer/utils/plot/: __init__.py  pe_ratio.py  time_series.py
src/service/: cloudflare.py
